--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -28,8 +28,29 @@
 }
 
 .toggleButton {
+  all: unset;
+  display: flex;
+  flex-direction: column;
   margin-left: auto;
   padding: 0.5rem;
   background: white;
   color: black;
+  border: 1px solid currentColor;
+  border-radius: 0;
+  text-align: center;
+  cursor: pointer;
+
+  &:hover,
+  &:active {
+    border: 1px solid black;
+  }
+
+  &:active {
+    border: 1px solid white;
+  }
+
+  > .hidden-text {
+    overflow: hidden;
+    height: 0;
+  }
 }
